--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
-  "name": "c.r userbot",
-  "description": " Arabic cristin Powerful & Safe based on Telethon",
+  "name": "r.x userbot",
+  "description": " Arabic Armx Powerful & Safe based on Telethon",
   "logo": "https://telegra.ph/DAED-CODE-DEV-10-11",
   "keywords": [
     "plugin",
