--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "r.x userbot",
   "description": " Arabic Armx Powerful & Safe based on Telethon",
-  "logo": "https://telegra.ph/DAED-CODE-DEV-10-11",
+  "logo": "https://avatars.githubusercontent.com/u/90526870?s=400&u=4e421f63bd12300b31903b712eb6b86f58f7e2d6&v=4",
   "keywords": [
     "plugin",
     "modular",
